--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "couchbase": "~0.0.11",
-    "mongodb": "~1.2.14"
+    "mongodb": "~1.2.14",
+    "async": "~0.2.6",
+    "uuid": "~1.4.1"
   },
   "devDependencies": {},
   "scripts": {
